[B]Version 1.1.124[/B]
- whoreshub - added authentication (required for playing 1024p videos)
- speedporn - fix Categories - Loads all the pages
- watchporn - new site
- foxnxx - new site